--- a/App.config
+++ b/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <appSettings>
+        <add key="Usuario" value="masellam" />
+        <add key="Clave" value="loli2911" />
+    </appSettings>
 </configuration>
